--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "backend",
   "version": "0.0.0",
   "private": true,
-  "scripts": {
-    "start": "nodemon ./bin/www"
-  },
+"scripts": {
+  "start": "node ./bin/www",
+  "dev": "nodemon ./bin/www"
+},
   "dependencies": {
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
