data base changed

--- a/.env
+++ b/.env
@@ -2,3 +2,12 @@ JWT_SECRET=your_secret_key
 CLOUDINARY_CLOUD_NAME=dtyuk2jog
 CLOUDINARY_API_KEY=341444939849746
 CLOUDINARY_API_SECRET=hSe4p_FLXRsYmPqkcilZY2U9igo
+DB_HOST=crossover.proxy.rlwy.net
+DB_PORT=35271
+DB_USER=root
+DB_PASSWORD=jZbkLDunlzYbgtAvGUxBxXwpJAkiNYZa
+DB_NAME=railway
+
+
+
+
